# sdl-demo

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  build_gmake  convert.txt  premake4.lua
assets/: ball.xcf
cmake/: FindSDL.cmake  FindXMP.cmake
src/assets/: ball.h  font-16x16-1520x16.h  font.h  image.h  moddata.h  palette.h  raveman.h  stars.h
src/demo/: SDLMain.m  ball.h  demoTimer.cpp  demoTimer.h  font-16x16-1520x16.h  font.h  hex2surface.cpp  hex2surface.h  main.cpp  main2.cpp  moddata.h  palette.h  star_bmp.cpp  star_bmp.h  stars.h  timer.cpp  timer.h  version.h.in  xmp.h
